fixed TF2 Build font not working on mobile

--- a/balances/weapons_style.css
+++ b/balances/weapons_style.css
@@ -1,5 +1,5 @@
 h1 {
-	font-family: 'TF2 Build';
+	font-family: TF2 Build;
 	font-size: 64px;
 	text-align: center;
 	color: #F4722B;
@@ -23,6 +23,7 @@ th {
 
 .quick-access {
 	width: fit-content;
+	height: fit-content;
 	margin: 25px auto;
 	text-align: center;
 	background-color: #F3A957;
